--- a/force-app/main/default/classes/RV_TermTriggerClass.cls
+++ b/force-app/main/default/classes/RV_TermTriggerClass.cls
@@ -597,7 +597,7 @@ triggerMasterData+=' AND MRC_Number__r.Ship_to_Number__c =:shipToAccNum';
                 newSHTObj1.Volume_CBM__c=rvTriggerMasterData.TriggerVolume* 0.80; 
 				if(!mrcNoVsSalesPriceWrapMap.isEmpty() && mrcNoVsSalesPriceWrapMap.containsKey(newSHTObj1.MRC_Number__c)){
                     newSHTObj1.BSP__c = ((mrcNoVsSalesPriceWrapMap.get(newSHTObj1.MRC_Number__c)).BSP).setScale(2, RoundingMode.HALF_UP);//added to roundOf with 2 decimals
-                    newSHTObj1.MSP__c = (mrcNoVsSalesPriceWrapMap.get(newSHTObj1.MRC_Number__c).MSP).setScale(2, RoundingMode.HALF_UP);
+                    newSHTObj1.MSP__c = (mrcNoVsSalesPriceWrapMap.get(newSHTObj1.MRC_Number__c).MSP).setScale(2, RoundingMode.HALF_UP);//added to roundOf with 2 decimals
                 }
                 else{
                         newSHTObj1.BSP__c = rvTriggerMasterData.BSP;
@@ -646,8 +646,8 @@ triggerMasterData+=' AND MRC_Number__r.Ship_to_Number__c =:shipToAccNum';
                 newSHTObj2.Location__c =rvTriggerMasterData.MRC_Number_Plant;
                 newSHTObj2.Volume_CBM__c=rvTriggerMasterData.TriggerVolume* 0.05;
 				if(!mrcNoVsSalesPriceWrapMap.isEmpty() && mrcNoVsSalesPriceWrapMap.containsKey(newSHTObj2.MRC_Number__c)){
-                        newSHTObj2.BSP__c = ((mrcNoVsSalesPriceWrapMap.get(newSHTObj2.MRC_Number__c)).BSP).setScale(2, RoundingMode.HALF_UP);
-                        newSHTObj2.MSP__c = (mrcNoVsSalesPriceWrapMap.get(newSHTObj2.MRC_Number__c).MSP).setScale(2, RoundingMode.HALF_UP);
+                        newSHTObj2.BSP__c = ((mrcNoVsSalesPriceWrapMap.get(newSHTObj2.MRC_Number__c)).BSP).setScale(2, RoundingMode.HALF_UP);//added to roundOf with 2 decimals
+                        newSHTObj2.MSP__c = (mrcNoVsSalesPriceWrapMap.get(newSHTObj2.MRC_Number__c).MSP).setScale(2, RoundingMode.HALF_UP);//added to roundOf with 2 decimals
                     }
                     else{
                         newSHTObj2.BSP__c = rvTriggerMasterData.BSP;
