--- a/force-app/main/default/classes/RE_UtilityClass.cls
+++ b/force-app/main/default/classes/RE_UtilityClass.cls
@@ -1,14 +1,24 @@
-public class RE_UtilityClass {
-    //Creation of Country Data  
+/**************************************************************************************************
+* Name: RE_UtilityClass
+* Object: Utility Class
+* Purpose: Used for Rev Lite Utility
+* Author:
+* Create Date:
+* Modify History:
+* 2023-02-03		Abhilash		Modified - Performance improvement/Error Handling PBI#1651105
+* 2023-02-03        Vishal Nigam    Added exception handling process PBI#1700749
+**************************************************************************************************/
+public without sharing class RE_UtilityClass {
+    //Creation of Country Data
     public static Country__c getCountryCode(String sCountryName)
-    {  
+    {
         Country__c sCountry = new Country__c(Name= sCountryName);
         insert sCountry;
         return sCountry;
     }
     //Creation of Location Data
     public static RE_Location__c getLocation(String sNames,String AbbreviateName,String sCountryName)
-    {   
+    {
         Country__c ssCountry =  [SELECT Id from Country__c where Name=:sCountryName];
         // Id CountryRecordTypeId = Schema.SObjectType.RE_Location__c.getRecordTypeInfosByName().get(sCountryName).getRecordTypeId();
         RE_Location__c sLocation = new RE_Location__c(RE_Abbreviated_Name__c=AbbreviateName,Name=sNames,RE_Country__c=ssCountry.Id,RE_Region_Name__c='Peninsular');
@@ -17,7 +27,7 @@ public class RE_UtilityClass {
     }
      //Creation of Location Data
     public static RE_Location__c getSabahLocation(String sNames,String AbbreviateName,String sCountryName)
-    {  
+    {
         Country__c ssCountry =  [SELECT Id from Country__c where Name=:sCountryName];
         // Id CountryRecordTypeId = Schema.SObjectType.RE_Location__c.getRecordTypeInfosByName().get(sCountryName).getRecordTypeId();
         RE_Location__c sLocation = new RE_Location__c(RE_Abbreviated_Name__c=AbbreviateName,Name=sNames,RE_Country__c=ssCountry.Id,RE_Region_Name__c='Sabah');
@@ -78,7 +88,7 @@ public class RE_UtilityClass {
                                                     RE_Tracker__c = sTracker);
         insert sFXRates;
         return sFXRates;
-    } 
+    }
     //Creation of FXRates Data
     public static RE_FX_Rates__c createFXRecords(String sForexName, Decimal sForexRate,String sBaseUnit,String sConversionUnit,String sCountryNme)
     {
@@ -92,7 +102,7 @@ public class RE_UtilityClass {
                                                     RE_Tracker__c = 'D');
         insert sFXRates;
         return sFXRates;
-    } 
+    }
     //Creation of FXRates Data
     public static RE_FX_Rates__c createFXRecordsYday(String sForexName, Decimal sForexRate,String sBaseUnit,String sConversionUnit,String sCountryNme)
     {
@@ -106,9 +116,9 @@ public class RE_UtilityClass {
                                                     RE_Tracker__c = 'D-1');
         insert sFXRates;
         return sFXRates;
-    } 
-    
-     
+    }
+
+
     //Creation of DepotPricingBackbone Data
     public static RE_Depot_Pricing_Backbone__c createDPB(String sCountry,String sLocName,String sProdName,String unit)
     {
@@ -121,15 +131,15 @@ public class RE_UtilityClass {
                                                                             RE_Product_Name__c=sProduct.Id,RE_Final_Price_Unit__c=unit,
                                                                             RE_Valid_From__c=System.Today(),RE_Valid_To__c= System.Today(),RE_SnH_Unit__c=unit,
                                                                            RE_IsDistillisationRate__c = False,recordtypeId=DPBRecordTypeId);
-        
+
         insert sDPB;
         sDPB = [SELECT RE_Backbone_Name__c,RE_Country__c,RE_Product_Name__r.Name, RE_Depot_Name__r.RE_Region_Name__c,RE_Snh_Cost__c,RE_Depot_Name__r.Name,RE_Depot_Name__c,
                 RE_Product_Name__c,RE_Country__r.Name,RE_Final_Price_Unit__c,RE_IsDistillisationRate__c,RE_Fixed_Premium__c,
-        		RE_Primary_Transport_Cost__c,RE_Primary_Transport_Offset__c,RE_Primary_Transport_Unit__c,RE_SnH_Unit__c
+                RE_Primary_Transport_Cost__c,RE_Primary_Transport_Offset__c,RE_Primary_Transport_Unit__c,RE_SnH_Unit__c
         FROM  RE_Depot_Pricing_Backbone__c WHERE RE_Product_Name__r.Name =: sProdName order by createddate desc LIMIT 1];
         return sDPB;
     }
-    
+
     //Creation of DepotPricingBackbone Data
     public static RE_Depot_Pricing_Backbone__c createDPBPH(String sCountry,String sLocName,String sProdName,String unit)
     {
@@ -159,8 +169,8 @@ public class RE_UtilityClass {
                                                                RE_Valid_To__c= System.Today(),RE_Route_Utilization__c=72, RecordtypeId = rectypeId);
         insert sRBdata;
         return sRBdata;
-    } 
-    
+    }
+
     //Creation based Costing Data
      public static RE_Route_Based_Costing__c routeBasedCosting(Boolean sIsLatest)
      {
@@ -168,10 +178,10 @@ public class RE_UtilityClass {
          insert sRBCostingdata;
          return sRBCostingdata;
      }
-         
+
     //Creation of RE_Malaysian_Formula_Table__mdt
     public static List<RE_Malaysian_Formula_Table__mdt> getMFTinput()
-    {          
+    {
         return(
             [SELECT RE_MY_Bio_Loss_Percentage__c,RE_MY_Bio_Quote_1__c,RE_MY_Bio_Quote_2__c,
              RE_MY_Bio_Quote_3__c,RE_MY_Bio_Quote_Percentage__c,RE_MY_BreakBulk_Premium_Quote_Percentage__c,RE_MY_BreakBulk_Premium_Quote__c,
@@ -180,11 +190,11 @@ public class RE_UtilityClass {
              RE_MY_Small_lot_percentage__c,RE_MY_Small_lot_premium_Unit__c,RE_MY_Small_lot_premium__c,RE_MY_TP_Premium_Percentage__c,
              RE_MY_TP_Premium__c,RE_MY_MR_Cost_Percentage__c,RE_MY_MR_Demurrage_Unit__c,RE_MY_MR_Demurrage__c,RE_MY_MR_Frieght_Quote__c,
              RE_MY_Port_Charges__c,RE_MY_Port_Charges_Unit__c,RE_MY_Valid_From__c,RE_MY_Valid_To__c,RE_MY_TP_Premium_Unit__c
-             FROM RE_Malaysian_Formula_Table__mdt 
-             
+             FROM RE_Malaysian_Formula_Table__mdt
+
             ]);
     }
-    //Creation of Singapore formula data from metadata 
+    //Creation of Singapore formula data from metadata
     public static List<RE_SG_Cost_Price_Manager__mdt> fetchSingaporeformulaData(){
         return(
             [SELECT RE_SG_HCV_Quote_1_Percent__c,RE_SG_HCV_Quote_1__c,RE_SG_HCV_Quote_2_Percent__c,RE_SG_HCV_Quote_2__c,
@@ -194,79 +204,79 @@ public class RE_UtilityClass {
              WHERE RE_SG_Valid_From__c <= Today
              AND RE_SG_Valid_To__c >= Today
             ]);
-        
+
     }
       //Fetch Custom Setting Data For Rate Conversion
         public static void fetchRateUnitData(){
-        List<RE_Rate_Unit_Manager__c> reUnitMagrCustSetting = new List<RE_Rate_Unit_Manager__c>(); 
+        List<RE_Rate_Unit_Manager__c> reUnitMagrCustSetting = new List<RE_Rate_Unit_Manager__c>();
         RE_Rate_Unit_Manager__c reUnitMagrCustSetting1 = new RE_Rate_Unit_Manager__c();
-        reUnitMagrCustSetting1.Name = 'USD/BBL'; 
+        reUnitMagrCustSetting1.Name = 'USD/BBL';
         reUnitMagrCustSetting1.RE_Currency_Unit__c= 'USD';
         reUnitMagrCustSetting1.RE_Rate_Unit__c= 'USD/BBL';
-        reUnitMagrCustSetting1.RE_Volume_Unit__c='BBL';  
+        reUnitMagrCustSetting1.RE_Volume_Unit__c='BBL';
         reUnitMagrCustSetting.add(reUnitMagrCustSetting1);
-       
+
         RE_Rate_Unit_Manager__c reUnitMagrCustSetting2 = new RE_Rate_Unit_Manager__c();
-        reUnitMagrCustSetting2.Name = 'MYR CTS/LTR'; 
-        reUnitMagrCustSetting2.RE_Currency_Unit__c= 'MYR CTS'; 
-        reUnitMagrCustSetting2.RE_Rate_Unit__c= 'MYR CTS/LTR'; 
-        reUnitMagrCustSetting2.RE_Volume_Unit__c='LTR'; 
+        reUnitMagrCustSetting2.Name = 'MYR CTS/LTR';
+        reUnitMagrCustSetting2.RE_Currency_Unit__c= 'MYR CTS';
+        reUnitMagrCustSetting2.RE_Rate_Unit__c= 'MYR CTS/LTR';
+        reUnitMagrCustSetting2.RE_Volume_Unit__c='LTR';
         reUnitMagrCustSetting.add(reUnitMagrCustSetting2);
-            
+
         RE_Rate_Unit_Manager__c reUnitMagrCustSetting3 = new RE_Rate_Unit_Manager__c();
-        reUnitMagrCustSetting3.Name = 'MYR/TON'; 
-        reUnitMagrCustSetting3.RE_Currency_Unit__c= 'MYR'; 
-        reUnitMagrCustSetting3.RE_Rate_Unit__c= 'MYR/TON'; 
-        reUnitMagrCustSetting3.RE_Volume_Unit__c='TON'; 
+        reUnitMagrCustSetting3.Name = 'MYR/TON';
+        reUnitMagrCustSetting3.RE_Currency_Unit__c= 'MYR';
+        reUnitMagrCustSetting3.RE_Rate_Unit__c= 'MYR/TON';
+        reUnitMagrCustSetting3.RE_Volume_Unit__c='TON';
         reUnitMagrCustSetting.add(reUnitMagrCustSetting3);
-            
+
         RE_Rate_Unit_Manager__c reUnitMagrCustSetting4 = new RE_Rate_Unit_Manager__c();
         reUnitMagrCustSetting4.Name = 'USD CTS/LTR';
         reUnitMagrCustSetting4.RE_Currency_Unit__c=     'USD CTS';
         reUnitMagrCustSetting4.RE_Rate_Unit__c= 'USD CTS/LTR';
         reUnitMagrCustSetting4.RE_Volume_Unit__c='LTR';
         reUnitMagrCustSetting.add(reUnitMagrCustSetting4);
-         
+
         RE_Rate_Unit_Manager__c reUnitMagrCustSetting5 = new RE_Rate_Unit_Manager__c();
         reUnitMagrCustSetting5.Name = 'SGD CTS/LTR';
         reUnitMagrCustSetting5.RE_Currency_Unit__c=     'SGD CTS';
         reUnitMagrCustSetting5.RE_Rate_Unit__c= 'SGD CTS/LTR';
         reUnitMagrCustSetting5.RE_Volume_Unit__c='LTR';
         reUnitMagrCustSetting.add(reUnitMagrCustSetting5);
-            
-            
+
+
         RE_Rate_Unit_Manager__c reUnitMagrCustSetting6 = new RE_Rate_Unit_Manager__c();
-        reUnitMagrCustSetting6.Name = 'THB/LTR'; 
-        reUnitMagrCustSetting6.RE_Currency_Unit__c= 'THB'; 
-        reUnitMagrCustSetting6.RE_Rate_Unit__c= 'THB/LTR'; 
-        reUnitMagrCustSetting6.RE_Volume_Unit__c='LTR'; 
+        reUnitMagrCustSetting6.Name = 'THB/LTR';
+        reUnitMagrCustSetting6.RE_Currency_Unit__c= 'THB';
+        reUnitMagrCustSetting6.RE_Rate_Unit__c= 'THB/LTR';
+        reUnitMagrCustSetting6.RE_Volume_Unit__c='LTR';
         reUnitMagrCustSetting.add(reUnitMagrCustSetting6);
         RE_Rate_Unit_Manager__c reUnitMagrCustSetting7 = new RE_Rate_Unit_Manager__c();
-        reUnitMagrCustSetting7.Name = 'STG/LTR'; 
-        reUnitMagrCustSetting7.RE_Currency_Unit__c= 'STG'; 
-        reUnitMagrCustSetting7.RE_Rate_Unit__c= 'THB/LTR'; 
-        reUnitMagrCustSetting7.RE_Volume_Unit__c='LTR'; 
+        reUnitMagrCustSetting7.Name = 'STG/LTR';
+        reUnitMagrCustSetting7.RE_Currency_Unit__c= 'STG';
+        reUnitMagrCustSetting7.RE_Rate_Unit__c= 'THB/LTR';
+        reUnitMagrCustSetting7.RE_Volume_Unit__c='LTR';
         reUnitMagrCustSetting.add(reUnitMagrCustSetting7);
         RE_Rate_Unit_Manager__c reUnitMagrCustSetting8 = new RE_Rate_Unit_Manager__c();
-        reUnitMagrCustSetting8.Name = 'PHP/LTR'; 
-        reUnitMagrCustSetting8.RE_Currency_Unit__c= 'PHP'; 
-        reUnitMagrCustSetting8.RE_Rate_Unit__c= 'PHP/LTR'; 
-        reUnitMagrCustSetting8.RE_Volume_Unit__c='LTR'; 
+        reUnitMagrCustSetting8.Name = 'PHP/LTR';
+        reUnitMagrCustSetting8.RE_Currency_Unit__c= 'PHP';
+        reUnitMagrCustSetting8.RE_Rate_Unit__c= 'PHP/LTR';
+        reUnitMagrCustSetting8.RE_Volume_Unit__c='LTR';
         reUnitMagrCustSetting.add(reUnitMagrCustSetting8);
         RE_Rate_Unit_Manager__c reUnitMagrCustSetting9 = new RE_Rate_Unit_Manager__c();
-        reUnitMagrCustSetting9.Name = 'PHP/TON'; 
-        reUnitMagrCustSetting9.RE_Currency_Unit__c= 'PHP'; 
-        reUnitMagrCustSetting9.RE_Rate_Unit__c= 'PHP/TON'; 
-        reUnitMagrCustSetting9.RE_Volume_Unit__c='TON'; 
+        reUnitMagrCustSetting9.Name = 'PHP/TON';
+        reUnitMagrCustSetting9.RE_Currency_Unit__c= 'PHP';
+        reUnitMagrCustSetting9.RE_Rate_Unit__c= 'PHP/TON';
+        reUnitMagrCustSetting9.RE_Volume_Unit__c='TON';
         reUnitMagrCustSetting.add(reUnitMagrCustSetting9);
         RE_Rate_Unit_Manager__c reUnitMagrCustSetting10 = new RE_Rate_Unit_Manager__c();
-        reUnitMagrCustSetting10.Name = 'USD/TON'; 
-        reUnitMagrCustSetting10.RE_Currency_Unit__c= 'USD'; 
-        reUnitMagrCustSetting10.RE_Rate_Unit__c= 'USD/TON'; 
-        reUnitMagrCustSetting10.RE_Volume_Unit__c='TON'; 
+        reUnitMagrCustSetting10.Name = 'USD/TON';
+        reUnitMagrCustSetting10.RE_Currency_Unit__c= 'USD';
+        reUnitMagrCustSetting10.RE_Rate_Unit__c= 'USD/TON';
+        reUnitMagrCustSetting10.RE_Volume_Unit__c='TON';
         reUnitMagrCustSetting.add(reUnitMagrCustSetting10);
-        insert reUnitMagrCustSetting;    
-        
+        insert reUnitMagrCustSetting;
+
      }
         //Fetch Custom Setting Data For Volume Conversion
         public static void fetchVolumeConversionData(){
@@ -286,7 +296,7 @@ public class RE_UtilityClass {
         reVolumeCustSetting1.RE_MY_Country__c = 'Singapore';
         reVolumeCustSetting1.RE_MY_Volume_Unit__c = 'TON';
         reVolumeCustSetting1.RE_MY_Product_Subgroup__c = 'Gasoil B7 0.05% S';
-        reVolumeConversion.add(reVolumeCustSetting1); 
+        reVolumeConversion.add(reVolumeCustSetting1);
         RE_MY_VolumeConversion__c reVolumeCustSetting2 =  new RE_MY_VolumeConversion__c();
         reVolumeCustSetting2.Name = 'VCU-3';
         reVolumeCustSetting2.RE_MY_Base_Volume_Unit__c = 'LTR';
@@ -300,7 +310,7 @@ public class RE_UtilityClass {
         reVolumeCustSetting3.RE_MY_Conversion_Rate__c = 115.0000;
         reVolumeCustSetting3.RE_MY_Country__c = 'Singapore';
         reVolumeCustSetting3.RE_MY_Volume_Unit__c = 'BBL';
-        reVolumeConversion.add(reVolumeCustSetting3); 
+        reVolumeConversion.add(reVolumeCustSetting3);
         RE_MY_VolumeConversion__c reVolumeCustSetting4 =  new RE_MY_VolumeConversion__c();
         reVolumeCustSetting4.Name = 'VCU-5';
         reVolumeCustSetting4.RE_MY_Base_Volume_Unit__c = 'LTR';
@@ -309,7 +319,7 @@ public class RE_UtilityClass {
         reVolumeCustSetting4.RE_MY_Volume_Unit__c = 'TON';
         reVolumeCustSetting4.RE_MY_Product_Subgroup__c = 'Biofuel';
         reVolumeConversion.add(reVolumeCustSetting4);
-            
+
         RE_MY_VolumeConversion__c reVolumeCustSetting5 =  new RE_MY_VolumeConversion__c();
         reVolumeCustSetting5.Name = 'VCU-6';
         reVolumeCustSetting5.RE_MY_Base_Volume_Unit__c = 'LTR';
@@ -342,13 +352,13 @@ public class RE_UtilityClass {
         reVolumeConversion.add(reVolumeCustSetting8);
         insert reVolumeConversion;
      }
-     
-     public static RE_SG_CostPrice__c getCostPrice(){     
+
+     public static RE_SG_CostPrice__c getCostPrice(){
         RE_SG_CostPrice__c  ob= new RE_SG_CostPrice__c (RE_Job_Run_Count__c=9,RE_Pricing_Date__c=System.Today());
         insert ob;
         return ob;
      }
-     
+
      public static List<RE_MY_Output__c> getMYOutput(){
          List<RE_MY_Output__c> ls = new List<RE_MY_Output__c>();
         ls.add(new RE_MY_Output__c(RE_Gasoil_B7_0_05_S_LDC_Diff__c=156.78,RE_Region__c='Peninsular',RE_Job_Run_Count__c=0));
@@ -372,7 +382,7 @@ public class RE_UtilityClass {
         weeklyData.add(weeklyData1);
         insert weeklyData;
     }
-    
+
     public static void gainlosscreate(){
         RE_Gain_Loss_Audit__c glaudit = new RE_Gain_Loss_Audit__c();
         glaudit.RE_MOPS_Name__c = 'Gasoil 0.05% S';
@@ -381,7 +391,7 @@ public class RE_UtilityClass {
         glaudit.RE_MonthlyAverage__c = 33.6;
         insert glaudit;
     }
-    
+
     //customer creation MY customer Opps
     public Static Account createcustomer(String Name,String CustomerType,String AccNumber,String AccType,String ParentAccID,String RecordType ){
         Account acc = new Account();
@@ -393,12 +403,12 @@ public class RE_UtilityClass {
         acc.RecordTypeId=RecordType;
         if(ParentAccID != null && ParentAccID !='')
             acc.RE_Parent_Customer__c = ParentAccID;
-        
+
         insert acc;
-        
+
         return acc;
     }
-    
+
     //Contract creation for MY customer Opps
     public Static REV_Contract_Master__c createcontract(string customerID,String country,String calculationConfig,String plant,String material,string salesOrg){
         REV_Contract_Master__c contrct = new REV_Contract_Master__c();
@@ -406,13 +416,13 @@ public class RE_UtilityClass {
         contrct.Country_Name__c = country;
         contrct.RE_Custom_Ops_Calculation__c = calculationConfig;
         contrct.RT_Plant_Desc__c	= plant;
-        contrct.RT_Material_Desc__c = material; 
+        contrct.RT_Material_Desc__c = material;
         contrct.Active__c = true;
         contrct.RT_Valid_From__c= system.today();
         contrct.RT_Valid_To__c = system.today().addMonths(3);
         contrct.RE_Sales_Org__c = salesOrg;
         contrct.RE_PH_Approval_Scheme__c = 'Malaysia Approval Scheme';
-        
+
         insert contrct;
         return contrct;
     }
@@ -420,14 +430,14 @@ public class RE_UtilityClass {
     public Static RE_Custom_Ops_Configuration__c creatConfig(String Name,String Country){
         RE_Custom_Ops_Configuration__c Config = new RE_Custom_Ops_Configuration__c();
         Config.Name=Name;
-        Config.RE_Country__c=Country;      
+        Config.RE_Country__c=Country;
         Config.RE_Editable_Field__c='RE_Final_Price_Rebate__c';
-        
+
         insert Config;
-        return Config;        
+        return Config;
     }
-   
-    
+
+
     //Custom setting data creation for MY customer Opps access control
     public static RE_Customer_Opps__c creatAccessCon(String Name){
         RE_Customer_Opps__c accessContrl= new RE_Customer_Opps__c();
@@ -439,12 +449,12 @@ public class RE_UtilityClass {
         accessContrl.RE_Rejected__c = true;
         accessContrl.RE_Submitted__c = false;
         accessContrl.Email_ID__c ='test@gmail.com';
-        
+
         insert accessContrl;
-        
+
         return accessContrl;
     }
-    
+
     //Custom setting data creation for Report generation
     public static RE_CustomOpps_ReportConfiguration__c createReportConfig(String customerType,String region,string name){
         RE_CustomOpps_ReportConfiguration__c reportConfig = new RE_CustomOpps_ReportConfiguration__c();
@@ -463,10 +473,83 @@ public class RE_UtilityClass {
         reportConfig.RE_Is_Active__c = true;
         reportConfig.RE_Country_Name__c = 'Malaysia';
         reportConfig.RE_Varkey__c='RE_Sales_Org__c+RE_Customer_Group__c+RT_Location_Code__c+000000000+RE_Material_Code__c';
-        
-        Insert reportConfig;     
-        system.debug('--@@@--'+reportConfig);
-        return reportConfig;        
+
+        Insert reportConfig;
+        return reportConfig;
     }
-    
+
+    // User for storing RevLite exceptions into RV_Exception Object.
+    public static String reInsertExceptionRecord(String errorType, String className,String methodName,String getErrorMessage,String  getStatusCode){
+        String returnMsg = 'Success';
+        try{
+            RV_Exception__c rvExcep = new RV_Exception__c();
+            rvExcep.Type__c = errorType;
+            rvExcep.Apex_Class__c = className;
+            rvExcep.Method_Name__c = methodName;
+            rvExcep.RV_GetExceptionMessage__c = getErrorMessage;
+            rvExcep.Status_Code__c = getStatusCode;
+            insert rvExcep;
+        }
+        catch(Exception e){
+            returnMsg = 'Failure';
+        }
+
+        return returnMsg;
+    }
+
+    // User for storing list of RevLite exceptions into RV_Exception Object.
+    public static String reInsertExceptionRecord(List<RV_Exception__c> excpList){
+        String returnMsg = 'Success';
+        if(excpList.size()>0){
+            try{
+                insert excpList;
+            }
+            catch(Exception e){
+                returnMsg = 'Failure';
+            }
+        }
+        return returnMsg;
+    }
+
+    // Handling database upsert opertaion
+    public static ProcessedCountWrapper reHandleUpsertRequest(String className,String methodName,Database.UpsertResult[] upsertResult,RE_Job_Run_Audit__c jobRunAudit)
+    {
+        ProcessedCountWrapper pcWrppr = New ProcessedCountWrapper();
+        Integer successCount = 0;
+        Integer failureCount = 0;
+
+        List<RV_Exception__c> exceptionRecords = new List<RV_Exception__c>();
+        for(Database.UpsertResult sr : upsertResult){
+            if(sr.isSuccess()){
+                successCount++;
+            }
+            else{
+                failureCount++;
+                for(Database.Error err : sr.getErrors()) {
+                    exceptionRecords.add(new RV_Exception__c(
+                        Type__c = 'Exception',
+                        Apex_Class__c = className,
+                        Method_Name__c = methodName,
+                        Status_Code__c = String.valueof(err.getStatusCode()),
+                        RV_GetExceptionMessage__c = jobRunAudit?.Id + '- Error-->' + err.getMessage()
+                    ));
+                }
+            }
+        }
+
+        pcWrppr.successCount = successCount;
+        pcWrppr.failureCount = failureCount;
+
+        if(exceptionRecords.size()>0){
+            reInsertExceptionRecord(exceptionRecords);
+        }
+
+        return pcWrppr;
+    }
+
+    public class ProcessedCountWrapper
+    {
+        public Integer successCount;
+        public Integer failureCount;
+    }
 }
